glad-web: added local files option.

--- a/gladweb/templates/index.html
+++ b/gladweb/templates/index.html
@@ -131,6 +131,10 @@
                                     <input type="checkbox" name="omitkhr" id="omit-khr">
                                     <span class="&nbsp;label-body">Omit KHR</span>
                                 </div>
+                                <div class="row">
+                                    <input type="checkbox" name="localfiles" id="local-files">
+                                    <span class="&nbsp;label-body">Local Files</span>
+                                </div>
                             </div>
                         </div>
                     </section>
