--- a/gladweb/templates/index.html
+++ b/gladweb/templates/index.html
@@ -25,7 +25,7 @@
 
 <div class="container">
     <header class="header">
-        <h3>Glad</h3><h5>Multi-Language GL/GLES/EGL/GLX/WGL Loader-Generator based on the official specs.</h5>
+        <h3>Glad <small>2</small></h3><h5>Multi-Language Vulkan/GL/GLES/EGL/GLX/WGL Loader-Generator.</h5>
     </header>
 
     <main>
