glad-web: support for message sinks.

--- a/gladweb/static/glad.css
+++ b/gladweb/static/glad.css
@@ -174,3 +174,12 @@ td.size {
 .size {
     width: 60px;
 }
+
+.messages ul {
+    list-style: none;
+    margin-left: 25px;
+}
+
+.messages li {
+    margin: 0;
+}
