--- a/gladweb/templates/index.html
+++ b/gladweb/templates/index.html
@@ -122,14 +122,14 @@
                     <section id="options">
                         <div class="row">
                             <label for="profile-input">Options</label>
-                            <div class="six columns">
+                            <div class="twelve columns">
                                 <div class="row">
                                     <input type="checkbox" name="loader" id="loader-input" checked>
                                     <span class="&nbsp;label-body">Generate a loader</span>
                                 </div>
                                 <div class="row">
                                     <input type="checkbox" name="omitkhr" id="omit-khr">
-                                    <span class="&nbsp;label-body">Omit KHR</span>
+                                    <span class="&nbsp;label-body">Omit KHR (due to recent changes to the specification, this may not work anymore)</span>
                                 </div>
                                 <div class="row">
                                     <input type="checkbox" name="localfiles" id="local-files">
