--- a/gladweb/templates/index.html
+++ b/gladweb/templates/index.html
@@ -160,14 +160,14 @@
                         </div>
                     </div>
                 </div>
-
             </main>
 
             <footer>
                 <span class="u-pull-right">Specifications last updated: {{ created|pretty_date }}</span>Glad-Version: {{ glad_version }}
+                <div class="powered-by">
+                    <img height="70px" src="https://help.openshift.com/img/logos/openshift/Powered_by_OpenShift_Online.svg" alt="Powered by OpenShift">
+                </div>
             </footer>
         </div>
-
-        <script src="//cdn.webglstats.com/stat.js" defer="defer" async="async"></script>
     </body>
 </html>
